[gd_scene load_steps=13 format=3 uid="uid://d4natoux3lfg5"]

[ext_resource type="TileSet" uid="uid://c3kwhxl3y6gjq" path="res://assets/scenery/sideview_tileset/desert_tileset.tres" id="1_d7pfx"]
[ext_resource type="Texture2D" uid="uid://cdjb8lqllqn1q" path="res://assets/scenery/backgrounds/far_mountains.png" id="1_o2ott"]
[ext_resource type="Script" path="res://scripts/environment_scripts/witch_house.gd" id="2_3k1ba"]
[ext_resource type="Texture2D" uid="uid://dikwcct0qbp5x" path="res://assets/scenery/backgrounds/clouds.png" id="2_wq1hq"]
[ext_resource type="Texture2D" uid="uid://bdasvcsbvmpt6" path="res://assets/scenery/backgrounds/sky.png" id="3_063eb"]
[ext_resource type="Texture2D" uid="uid://c4c0h43moijfe" path="res://assets/ui_assets/interact_graphic.png" id="4_0k4bs"]
[ext_resource type="PackedScene" uid="uid://koe0ignv35fv" path="res://scenes/villager_scenes/witch.tscn" id="6_t6yip"]
[ext_resource type="PackedScene" uid="uid://blveoq1jtp0cn" path="res://scenes/dale_scenes/dale_sideview.tscn" id="7_o2yh7"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ntch7"]
radius = 42.0
height = 140.0

[sub_resource type="Animation" id="Animation_nlqtw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_h7ecd"]
resource_name = "interact"
length = 0.8
loop_mode = 1
step = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rfr8r"]
_data = {
"RESET": SubResource("Animation_nlqtw"),
"interact": SubResource("Animation_h7ecd")
}

[node name="witch_house" type="TileMap"]
tile_set = ExtResource("1_d7pfx")
format = 2
layer_0/tile_data = PackedInt32Array(720896, 131072, 0, 720897, 131072, 0, 720898, 131072, 0, 720899, 131072, 0, 720900, 131072, 0, 720901, 131072, 0, 720902, 131072, 0, 720903, 131072, 0, 720904, 131072, 0, 720905, 131072, 0, 720906, 131072, 0, 720907, 131072, 0, 720908, 131072, 0, 720909, 131072, 0, 720910, 131072, 0, 720911, 131072, 0, 720912, 131072, 0, 720913, 131072, 0, 720914, 131072, 0, 720915, 131072, 0, 720916, 131072, 0, 720917, 131072, 0, 720918, 131072, 0, 720919, 131072, 0, 720920, 131072, 0, 720921, 131072, 0, 720922, 131072, 0, 720923, 131072, 0, 720924, 131072, 0, 786432, 131072, 1, 851968, 131072, 1, 917504, 131072, 1, 983040, 131072, 1, 1048576, 131072, 1, 1114112, 131072, 1, 1179648, 131072, 1, 1245184, 131072, 1, 1310720, 131072, 1, 1376256, 131072, 1, 786433, 131072, 1, 851969, 131072, 1, 917505, 131072, 1, 983041, 131072, 1, 1048577, 131072, 1, 1114113, 131072, 1, 1179649, 131072, 1, 1245185, 131072, 1, 1310721, 131072, 1, 1376257, 131072, 1, 786434, 131072, 1, 851970, 131072, 1, 917506, 131072, 1, 983042, 131072, 1, 1048578, 131072, 1, 1114114, 131072, 1, 1179650, 131072, 1, 1245186, 131072, 1, 1310722, 131072, 1, 1376258, 131072, 1, 786435, 131072, 1, 851971, 131072, 1, 917507, 131072, 1, 983043, 131072, 1, 1048579, 131072, 1, 1114115, 131072, 1, 1179651, 131072, 1, 1245187, 131072, 1, 1310723, 131072, 1, 1376259, 131072, 1, 786436, 131072, 1, 851972, 131072, 1, 917508, 131072, 1, 983044, 131072, 1, 1048580, 131072, 1, 1114116, 131072, 1, 1179652, 131072, 1, 1245188, 131072, 1, 1310724, 131072, 1, 1376260, 131072, 1, 786437, 131072, 1, 851973, 131072, 1, 917509, 131072, 1, 983045, 131072, 1, 1048581, 131072, 1, 1114117, 131072, 1, 1179653, 131072, 1, 1245189, 131072, 1, 1310725, 131072, 1, 1376261, 131072, 1, 786438, 131072, 1, 851974, 131072, 1, 917510, 131072, 1, 983046, 131072, 1, 1048582, 131072, 1, 1114118, 131072, 1, 1179654, 131072, 1, 1245190, 131072, 1, 1310726, 131072, 1, 1376262, 131072, 1, 786439, 131072, 1, 851975, 131072, 1, 917511, 131072, 1, 983047, 131072, 1, 1048583, 131072, 1, 1114119, 131072, 1, 1179655, 131072, 1, 1245191, 131072, 1, 1310727, 131072, 1, 1376263, 131072, 1, 786440, 131072, 1, 851976, 131072, 1, 917512, 131072, 1, 983048, 131072, 1, 1048584, 131072, 1, 1114120, 131072, 1, 1179656, 131072, 1, 1245192, 131072, 1, 1310728, 131072, 1, 1376264, 131072, 1, 786441, 131072, 1, 851977, 131072, 1, 917513, 131072, 1, 983049, 131072, 1, 1048585, 131072, 1, 1114121, 131072, 1, 1179657, 131072, 1, 1245193, 131072, 1, 1310729, 131072, 1, 1376265, 131072, 1, 786442, 131072, 1, 851978, 131072, 1, 917514, 131072, 1, 983050, 131072, 1, 1048586, 131072, 1, 1114122, 131072, 1, 1179658, 131072, 1, 1245194, 131072, 1, 1310730, 131072, 1, 1376266, 131072, 1, 786443, 131072, 1, 851979, 131072, 1, 917515, 131072, 1, 983051, 131072, 1, 1048587, 131072, 1, 1114123, 131072, 1, 1179659, 131072, 1, 1245195, 131072, 1, 1310731, 131072, 1, 1376267, 131072, 1, 786444, 131072, 1, 851980, 131072, 1, 917516, 131072, 1, 983052, 131072, 1, 1048588, 131072, 1, 1114124, 131072, 1, 1179660, 131072, 1, 1245196, 131072, 1, 1310732, 131072, 1, 1376268, 131072, 1, 786445, 131072, 1, 851981, 131072, 1, 917517, 131072, 1, 983053, 131072, 1, 1048589, 131072, 1, 1114125, 131072, 1, 1179661, 131072, 1, 1245197, 131072, 1, 1310733, 131072, 1, 1376269, 131072, 1, 786446, 131072, 1, 851982, 131072, 1, 917518, 131072, 1, 983054, 131072, 1, 1048590, 131072, 1, 1114126, 131072, 1, 1179662, 131072, 1, 1245198, 131072, 1, 1310734, 131072, 1, 1376270, 131072, 1, 786447, 131072, 1, 851983, 131072, 1, 917519, 131072, 1, 983055, 131072, 1, 1048591, 131072, 1, 1114127, 131072, 1, 1179663, 131072, 1, 1245199, 131072, 1, 1310735, 131072, 1, 1376271, 131072, 1, 786448, 131072, 1, 851984, 131072, 1, 917520, 131072, 1, 983056, 131072, 1, 1048592, 131072, 1, 1114128, 131072, 1, 1179664, 131072, 1, 1245200, 131072, 1, 1310736, 131072, 1, 1376272, 131072, 1, 786449, 131072, 1, 851985, 131072, 1, 917521, 131072, 1, 983057, 131072, 1, 1048593, 131072, 1, 1114129, 131072, 1, 1179665, 131072, 1, 1245201, 131072, 1, 1310737, 131072, 1, 1376273, 131072, 1, 786450, 131072, 1, 851986, 131072, 1, 917522, 131072, 1, 983058, 131072, 1, 1048594, 131072, 1, 1114130, 131072, 1, 1179666, 131072, 1, 1245202, 131072, 1, 1310738, 131072, 1, 1376274, 131072, 1, 786451, 131072, 1, 851987, 131072, 1, 917523, 131072, 1, 983059, 131072, 1, 1048595, 131072, 1, 1114131, 131072, 1, 1179667, 131072, 1, 1245203, 131072, 1, 1310739, 131072, 1, 1376275, 131072, 1, 786452, 131072, 1, 851988, 131072, 1, 917524, 131072, 1, 983060, 131072, 1, 1048596, 131072, 1, 1114132, 131072, 1, 1179668, 131072, 1, 1245204, 131072, 1, 1310740, 131072, 1, 1376276, 131072, 1, 786453, 131072, 1, 851989, 131072, 1, 917525, 131072, 1, 983061, 131072, 1, 1048597, 131072, 1, 1114133, 131072, 1, 1179669, 131072, 1, 1245205, 131072, 1, 1310741, 131072, 1, 1376277, 131072, 1, 786454, 131072, 1, 851990, 131072, 1, 917526, 131072, 1, 983062, 131072, 1, 1048598, 131072, 1, 1114134, 131072, 1, 1179670, 131072, 1, 1245206, 131072, 1, 1310742, 131072, 1, 1376278, 131072, 1, 786455, 131072, 1, 851991, 131072, 1, 917527, 131072, 1, 983063, 131072, 1, 1048599, 131072, 1, 1114135, 131072, 1, 1179671, 131072, 1, 1245207, 131072, 1, 1310743, 131072, 1, 1376279, 131072, 1, 786456, 131072, 1, 851992, 131072, 1, 917528, 131072, 1, 983064, 131072, 1, 1048600, 131072, 1, 1114136, 131072, 1, 1179672, 131072, 1, 1245208, 131072, 1, 1310744, 131072, 1, 1376280, 131072, 1, 786457, 131072, 1, 851993, 131072, 1, 917529, 131072, 1, 983065, 131072, 1, 1048601, 131072, 1, 1114137, 131072, 1, 1179673, 131072, 1, 1245209, 131072, 1, 1310745, 131072, 1, 1376281, 131072, 1, 786458, 131072, 1, 851994, 131072, 1, 917530, 131072, 1, 983066, 131072, 1, 1048602, 131072, 1, 1114138, 131072, 1, 1179674, 131072, 1, 1245210, 131072, 1, 1310746, 131072, 1, 1376282, 131072, 1, 786459, 131072, 1, 851995, 131072, 1, 917531, 131072, 1, 983067, 131072, 1, 1048603, 131072, 1, 1114139, 131072, 1, 1179675, 131072, 1, 1245211, 131072, 1, 1310747, 131072, 1, 1376283, 131072, 1, 786460, 131072, 1, 851996, 131072, 1, 917532, 131072, 1, 983068, 131072, 1, 1048604, 131072, 1, 1114140, 131072, 1, 1179676, 131072, 1, 1245212, 131072, 1, 1310748, 131072, 1, 1376284, 131072, 1, 655381, 131072, 4, 524307, 0, 2, 589843, 0, 3, 655379, 0, 4, 524308, 65536, 2, 589844, 65536, 3, 655380, 65536, 4, 524309, 131072, 2, 589845, 131072, 3, 655382, 589824, 3, 589848, 327680, 0, 655384, 327680, 1, 589849, 393216, 0, 655385, 393216, 1, 589840, 327680, 0, 655376, 327680, 1, 589841, 393216, 0, 655377, 393216, 1, 655373, 458752, 1, 655374, 524288, 1, 655363, 524288, 1, 655362, 524288, 0, 655386, 589824, 0, 720925, 0, 0, 786461, 0, 0, 851997, 0, 0, 917533, 0, 0, 983069, 0, 0, 655389, 0, 0, 589853, 0, 0, 524317, 0, 0, 458781, 0, 0, 393245, 0, 0, 327709, 0, 0, 262173, 0, 0, 196637, 0, 0, 131101, 0, 0, 65565, 0, 0, 29, 0, 0, 1245183, 0, 0, 1179647, 0, 0, 1114111, 0, 0, 1048575, 0, 0, 983039, 0, 0, 917503, 0, 0, 851967, 0, 0, 786431, 0, 0, 458751, 0, 0, 524287, 0, 0, 589823, 0, 0, 655359, 0, 0, 720895, 0, 0, 393215, 0, 0, 655367, 262144, 2, 655368, 327680, 2, 655369, 393216, 2, 655370, 458752, 2)
script = ExtResource("2_3k1ba")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
offset = Vector2(1400, -400)
scale = Vector2(1.16, 1.16)
transform = Transform2D(1.16, 0, 0, 1.16, 1400, -400)
scroll_base_scale = Vector2(0.5, 0.5)

[node name="MountainLayer" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -1
position = Vector2(235, 134)
metadata/_edit_group_ = true

[node name="MountainSprite2D" type="Sprite2D" parent="ParallaxBackground/MountainLayer"]
scale = Vector2(0.7, 0.7)
texture = ExtResource("1_o2ott")

[node name="CloudLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(229, 357)
motion_scale = Vector2(0.8, 0.8)
metadata/_edit_group_ = true

[node name="CloudSprite2D" type="Sprite2D" parent="ParallaxBackground/CloudLayer"]
z_index = -2
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_wq1hq")

[node name="SkyLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.9, 0.9)

[node name="SkySprite2D" type="Sprite2D" parent="ParallaxBackground/SkyLayer"]
z_index = -3
position = Vector2(248, 377)
texture = ExtResource("3_063eb")
metadata/_edit_lock_ = true

[node name="ExitArea2D" type="Area2D" parent="."]
position = Vector2(-2, 677)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitArea2D"]
shape = SubResource("CapsuleShape2D_ntch7")

[node name="Sprite2D" type="Sprite2D" parent="ExitArea2D"]
visible = false
position = Vector2(68, -54)
texture = ExtResource("4_0k4bs")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="ExitArea2D"]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_rfr8r")
}

[node name="witch" parent="." instance=ExtResource("6_t6yip")]
position = Vector2(1267, 672)

[node name="dale_sideview" parent="." instance=ExtResource("7_o2yh7")]
position = Vector2(100, 675)

[connection signal="body_entered" from="ExitArea2D" to="." method="_on_exit_area_2d_body_entered"]
[connection signal="body_exited" from="ExitArea2D" to="." method="_on_exit_area_2d_body_exited"]
